<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mantralabsglobal.cashin.ui.activity.app.SubmitActivity"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--style="@style/Widget.CashIn.ActionBar"-->
        <!-->-->

        <!--<TextView android:text="@string/app_name" android:layout_width="match_parent"-->
            <!--android:textAlignment="left"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->

    <!--</android.support.v7.widget.Toolbar>-->


    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        style="@style/Widget.CashIn.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/ask_user_amount"
        tools:context="com.mantralabsglobal.cashin.ui.activity.app.SubmitActivity"
        android:orientation="vertical">


    <TextView android:text="@string/enter_loan_amount_view" android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <com.mantralabsglobal.cashin.ui.view.CustomEditText
        android:id="@+id/cc_loan_amount_user"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" app:field_label="@string/required_amount" app:field_icon="@drawable/ic_name"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/apply_for_loan"
        android:id="@+id/apply_loan_button"
        android:background="@drawable/bank_detail_statements"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <TextView android:text="@string/take_permission_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
