<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/currentLocationLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            style="@style/AppTheme.Form.ScrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/chkAadhaar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:checked="false"
                        android:text="@string/same_as_aadhaar_address" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aadhaar_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.mantralabsglobal.cashin.ui.view.CustomEditText
                        android:id="@+id/cc_aadhaar_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:field_icon="@drawable/ic_home_address"
                        app:field_label="@string/address" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/vg_address_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/adressTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="Residence Address" />

                    <com.mantralabsglobal.cashin.ui.view.CustomEditText
                        android:id="@+id/cc_street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:field_icon="@drawable/ic_identity"
                        app:field_label="@string/street" />

                    <com.mantralabsglobal.cashin.ui.view.CustomEditText
                        android:id="@+id/cc_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:field_icon="@drawable/ic_identity"
                        app:field_label="@string/city" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.mantralabsglobal.cashin.ui.view.CustomEditText
                            android:id="@+id/cc_state"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            app:field_icon="@drawable/ic_identity"
                            app:field_label="@string/state" />

                        <com.mantralabsglobal.cashin.ui.view.CustomEditText
                            android:id="@+id/cc_pincode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:field_label="@string/pincode" />

                    </LinearLayout>


                    <!--<com.mantralabsglobal.cashin.ui.view.CustomSpinner
                        android:id="@+id/cs_owned_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:field_label="@string/owned_by" app:field_icon="@drawable/ic_identity"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ownOrRentedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seperatorView"
                        android:layout_marginTop="10dp"
                        android:text="@string/house_own_or_rented" />

                    <RadioGroup
                        android:id="@+id/ownOrRentedRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_rent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rent" />

                        <RadioButton
                            android:id="@+id/rb_own"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/owned" />

                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/back_next_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

        <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_get_loc_from_gps"
            android:src="@drawable/gps_layer"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Form.FAB"
            app:borderWidth="0dp"/>-->

    </FrameLayout>

    <LinearLayout
        android:id="@+id/vg_gps_launcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout style="@style/AppTheme.Form.Fragment.Top">

            <TextView
                style="@style/AppTheme.Form.Fragment.Top.Header"
                android:text="Get location from GPS" />

            <ImageButton
                android:id="@+id/ib_get_gps_location"
                style="@style/AppTheme.Form.Fragment.Top.Image"
                android:src="@drawable/ic_gps_track" />

        </FrameLayout>


        <View style="@style/AppTheme.Form.Fragment.Seperator"></View>

        <FrameLayout style="@style/AppTheme.Form.Fragment.Bottom">

            <Button
                android:id="@+id/btn_edit_address"
                style="@style/AppTheme.Form.Fragment.Bottom.Button"
                android:text="Edit your current address  >" />
        </FrameLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progres_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
