<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mantralabsglobal.cashin.ui.fragment.tabs.LoanDetailsFragment">

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 -->

    <LinearLayout
        android:id="@+id/loan_approved_view_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/bank_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/ic_education" />

        <TextView
            android:id="@+id/credit_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/credit_line_text" />

        <TextView
            android:id="@+id/credit_line_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="" />

        <TextView
            android:id="@+id/remaining_funds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/remaining_funds_text" />

        <TextView
            android:id="@+id/remaining_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="" />

        <Button
            android:layout_width="fill_parent"
            android:layout_margin="30dp"
            android:text="@string/access_funds"
            android:id="@+id/access_funds"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/loan_access_funds"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bank_logo_access_funds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_education" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/credit_line_access_funds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/credit_line_text" />

                <TextView
                    android:id="@+id/credit_line_amount_access_funds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/select_amount_to_be_transferred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_amount_to_be_transferred" />

        <SeekBar
            android:id="@+id/seekBar_for_tranfer_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:indeterminate="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minimum_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/user_selected_transferred_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/maximum_actual_loan_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/please_pick_one_of_the_below" />

        <TableLayout
            android:id="@+id/emi_table"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"></TableLayout>

        <!-- <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="vertical">

        <TextView
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_height="wrap_content"
             android:text="@string/money_tranferred_account_number" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="left"
                 android:id="@+id/account_number"
                 android:layout_height="wrap_content"
                 android:text="" />

             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"

                 android:id="@+id/transfer_to_my_account_button"
                 android:text="@string/tranfer_to_my_account"/>
         </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_transfer_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/money_tranferred_account_number" />

            <TextView
                android:id="@+id/account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="" />

        </LinearLayout>

        <Button
            android:id="@+id/transfer_to_my_account_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tranfer_to_my_account" />
    </LinearLayout>

</FrameLayout>
